AgTenplate/force-app/main/default/objects/Crop__c/Crop__c.object-meta.xml
<CustomObject>
    <label>Crop</label>
    <nameField>
        <label>Crop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>