AgTenplate/force-app/main/default/objects/Crop__c/fields/Climate__c.field-meta.xml
<CustomField>
    <fullName>Climate__c</fullName>
    <label>Climate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temperate</fullName>
            </value>
            <value>
                <fullName>Warm Temperate</fullName>
            </value>
            <value>
                <fullName>Cool Temperate</fullName>
            </value>
            <value>
                <fullName>Warm Humid</fullName>
            </value>
            <value>
                <fullName>Tropical</fullName>
            </value>
            <value>
                <fullName>Arid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>