AgTenplate/force-app/main/default/objects/Crop__c/fields/Growing_Season__c.field-meta.xml
<CustomField>
    <fullName>Growing_Season__c</fullName>
    <label>Growing Season</label>
    <length>100</length>
    <type>Text</type>
</CustomField>