AgTenplate/force-app/main/default/objects/Crop__c/fields/Harvest_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Time_Days__c</fullName>
    <label>Harvest Time (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>