AgTenplate/force-app/main/default/objects/Crop__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cereal Grain</fullName>
            </value>
            <value>
                <fullName>Fiber Crop</fullName>
            </value>
            <value>
                <fullName>Tuber</fullName>
            </value>
            <value>
                <fullName>Vegetable</fullName>
            </value>
            <value>
                <fullName>Fruit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>