AgTenplate/force-app/main/default/objects/Crop__c/fields/Water_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Water_Requirements__c</fullName>
    <label>Water Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>