AgTenplate/force-app/main/default/objects/Crop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Climate__c</columns>
    <columns>Growing_Season__c</columns>
    <columns>Harvest_Time_Days__c</columns>
    <columns>Soil_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Water_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>